fixed overflow at the bottom of the title screen

--- a/start.css
+++ b/start.css
@@ -21,13 +21,13 @@ body {
 
 header {
   height: 15%;
-  margin-top: 2%;
+  margin-top: 1%;
   margin-bottom: 1%;
   display: flex;
   justify-content: center;
 }
 
-#title_container{
+#title_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -93,7 +93,7 @@ main {
 }
 
 #damage_chart {
-  height:100%;
+  height: 100%;
   width: 40%;
 }
 
@@ -165,7 +165,7 @@ button {
   width: 80%;
 }
 
-#start_button{
+#start_button {
   height: 60%;
   width: 80%;
 }
